--- a/templates/dataMigration.html
+++ b/templates/dataMigration.html
@@ -46,6 +46,31 @@
             word-break: break-word;
             overflow-wrap: break-word;
         }
+
+        .form-item {
+            margin-bottom: 20px;
+            /* Add vertical spacing between label-input pairs */
+        }
+
+        .form-item label {
+            display: block;
+            /* Display labels as block elements to stack them above inputs */
+            margin-bottom: 5px;
+            /* Add spacing between label and input */
+        }
+
+
+        .custom-input {
+            width: 300px;
+            /* Set your desired width here */
+            border: 1px solid #ccc;
+            overflow: auto;
+            /* Add a scrollbar if content exceeds the height */
+            padding: 10px;
+            /* Optional padding for better appearance */
+            white-space: pre-wrap;
+            /* Allow text to wrap within the div */
+        }
     </style>
 </head>
 
@@ -164,6 +189,66 @@
             <div class="container-fluid">
                 {% include 'debug.html' %}
 
+                <div class="modal fade" id="updateModal" tabindex="-1"
+                    aria-labelledby="updateModal" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <form method="POST" action="/declare">
+
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Update Declaration</h5>
+                                    <div class="form-item">
+                                        <input type="text" id="modalcustID" name="modalcustID" class="custom-input"
+                                            readonly hidden>
+                                    </div>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+
+
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="form-item">
+                                                <label for="modalCustName">Name</label>
+                                                <input type="text" class="custom-input" name="modalCustName"
+                                                    id="modalCustName" required />
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="form-item">
+                                                <label for="modalCustPhone">Phone No.</label>
+                                                <input type="text" class="custom-input" name="modalCustPhone"
+                                                    id="modalCustPhone" required />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="form-item">
+                                                <label for="modalCustAddr">Address</label>
+                                                <input type="text" class="custom-input" name="modalCustAddr"
+                                                    id="modalCustAddr" required />
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="form-item">
+                                                <label for="modalCustInfo">Additional Info</label>
+                                                <input type="text" class="custom-input" name="modalCustInfo"
+                                                    id="modalCustInfo" required />
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="modal-footer" style="justify-content: flex-start;">
+                                    <button type="submit" class="btn btn-primary">Update and Declare</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-12">
                         <h2 class="card-title" style="margin-bottom: 20px;">Data Migration</h2>
@@ -211,7 +296,13 @@
                                                 <td>{{cust['Customer_Address']}}</td>
                                                 <td>{{cust['Customer_Additional_Info']}}</td>
                                                 <td>{{cust['Customer_Migration_Date']}}</td>
+
+                                                {% if cust['Customer_Declaration_Date'] == 'None' %}
+                                                <td>&#x2717;</td>
+                                                {% else %}
                                                 <td>{{cust['Customer_Declaration_Date']}}</td>
+
+                                                {% endif %}
 
                                                 {% if cust['Customer_Declaration_Date'] == 'None' %}
                                                 <td>
@@ -222,8 +313,16 @@
 
                                                         </a>
                                                         <div class="dropdown-menu dropdown-menu-end">
-                                                            <a class="dropdown-item" href="#"
-                                                                onclick="update({{cust}})">Update</a>
+                                                            <a class="dropdown-item" data-bs-toggle="modal"
+                                                                href="#updateModal" id="updateLink"
+                                                                data-cust-name="{{cust['Customer_Name']}}"
+                                                                data-cust-phone="{{cust['Customer_Phone_Number']}}"
+                                                                data-cust-address="{{cust['Customer_Address']}}"
+                                                                data-cust-info="{{cust['Customer_Additional_Info']}}"
+                                                                data-cust-id="{{cust['Customer_ID']}}">
+                                                                Update and Declare
+                                                            </a>
+
                                                         </div>
                                                     </div>
                                                 </td>
@@ -291,10 +390,33 @@
         <!--This page plugins -->
         <script src="/static/assets/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
         <script src="/static/assets/extra-libs/datatables.net-bs4/js/dataTables.responsive.min.js"></script>
+
         <script>
             $("#dmList").DataTable({
                 order: [[4, 'desc']],
             });
+
+        
+        </script>
+
+        <script>
+
+        $('#updateModal').on('show.bs.modal', function (event) {
+                let triggerLink = $(event.relatedTarget);
+                let custName = triggerLink.data('cust-name');
+                let custPhone = triggerLink.data('cust-phone');
+                let custAddress = triggerLink.data('cust-address');
+                let custInfo = triggerLink.data('cust-info');
+                let custID = triggerLink.data('cust-id');
+
+                $('#modalCustName').val(custName);
+                $('#modalCustPhone').val(custPhone);
+                $('#modalCustAddr').val(custAddress);
+                $('#modalCustInfo').val(custInfo);
+                $('#modalcustID').val(custID);
+            });
+        
+        
         </script>
 </body>
 
