--- a/templates/withDeclaration.html
+++ b/templates/withDeclaration.html
@@ -181,8 +181,8 @@
                                                 <th class="col-3">Address</th>
                                                 <th class="col-2">Additional Info</th>
                                                 <th class="col-1">Migration Date</th>
-                                                <th class="col-2">Declaration</th>
-                                                <th class="col-1">Action</th>
+                                                <th class="col-2">Declaration Date</th>
+                                               
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -195,9 +195,6 @@
                                                 <td>{{cust['Customer_Additional_Info']}}</td>
                                                 <td>{{cust['Customer_Migration_Date']}}</td>
                                                 <td>{{cust['Customer_Declaration_Date']}}</td>
-                                                <td>
-                                                    
-                                                </td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
