--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -138,14 +138,48 @@
           <h2 class="card-title" style="margin-bottom: 20px;">
           Dashboard
           </h2>
-            <div class="card">
-              <div class="card-body">
-                <h4 class="card-title">
-                </h4>
-
-
-              </div>
+          <div class="card">
+            <div class="card-body">
+              <div class="row">
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">TOTAL WHOLESALER</h4>
+                            <p class="card-text">{{dashList['wholeSaler']}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">TOTAL MIGRATE USER(S)</h4>
+                            <p class="card-text">{{dashList['active']}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <h4 class="card-title">ACTIVE WHOLESALER</h4>
+                            <p class="card-text">{{dashList['inactive']}}</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- Card content for Card 4 -->
+                            <h4 class="card-title">TOTAL MIGRATE USER</h4>
+                            <p class="card-text">{{dashList['totalCust']}}</p>
+                        </div>
+                    </div>
+                </div>
             </div>
+            </div>
+          </div>
+
+
+
           </div>
         </div>
 
