--- a/web/templates/sidebarWholeseller.html
+++ b/web/templates/sidebarWholeseller.html
@@ -45,6 +45,17 @@
                   ><span class="hide-menu" style="white-space: normal;">Customer List (Without Declaration)</span></span></a
                 >
               </li>
+
+
+              <li class="sidebar-item">
+                <a
+                  class="sidebar-link waves-effect waves-dark sidebar-link"
+                  href="/bundleDeclare"
+                  aria-expanded="false"
+                  ><i class="mdi mdi-table"></i
+                  ><span class="hide-menu" style="white-space: normal;">Bundle Declaration</span></span></a
+                >
+              </li>
               
             </ul>
           </nav>
