--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -65,7 +65,7 @@
             {#<b class="logo-icon">
               <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
               <!-- Dark Logo icon -->
-              <img src="/static/assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+              <img src="static/assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
               <!-- Light Logo icon -->
               <img src="https://intranet.redtone.com/home/logotkt.png" alt="homepage" class="light-logo" />
             </b>#}
@@ -73,8 +73,8 @@
             <!-- Logo text -->
             <span class="logo-text">
               <!-- dark Logo text -->
-              <img src="/static/assets/images/logo-text.png" alt="homepage" class="dark-logo" />
-              <img src="/static/assets/images/Redtone.png" alt="homepage" class="light-logo" width="135" height="50" />
+              <img src="static/assets/images/logo-text.png" alt="homepage" class="dark-logo" />
+              <img src="static/assets/images/Redtone.png" alt="homepage" class="light-logo" width="135" height="50" />
             </span>
           </a>
           <!-- ============================================================== -->
@@ -212,29 +212,29 @@
   <!-- ============================================================== -->
   <!-- All Jquery -->
   <!-- ============================================================== -->
-  <script src="/static/assets/libs/jquery/dist/jquery.min.js"></script>
-  <script src="/static/assets/extra-libs/taskboard/js/jquery.ui.touch-punch-improved.js"></script>
-  <script src="/static/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
+  <script src="static/assets/libs/jquery/dist/jquery.min.js"></script>
+  <script src="static/assets/extra-libs/taskboard/js/jquery.ui.touch-punch-improved.js"></script>
+  <script src="static/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
   <!-- Bootstrap tether Core JavaScript -->
-  <!-- <script src="/static/assets/libs/popper.js/popper.min.js"></script> -->
-  <script src="/static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="static/assets/libs/popper.js/popper.min.js"></script> -->
+  <script src="static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <!-- apps -->
-  <script src="/static/dist/js/app.min.js"></script>
-  <script src="/static/dist/js/app.init.js"></script>
-  <script src="/static/dist/js/app-style-switcher.js"></script>
+  <script src="static/dist/js/app.min.js"></script>
+  <script src="static/dist/js/app.init.js"></script>
+  <script src="static/dist/js/app-style-switcher.js"></script>
   <!-- slimscrollbar scrollbar JavaScript -->
-  <script src="/static/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-  <script src="/static/assets/extra-libs/sparkline/sparkline.js"></script>
+  <script src="static/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+  <script src="static/assets/extra-libs/sparkline/sparkline.js"></script>
   <!--Wave Effects -->
-  <script src="/static/dist/js/waves.js"></script>
+  <script src="static/dist/js/waves.js"></script>
   <!--Menu sidebar -->
-  <script src="/static/dist/js/sidebarmenu.js"></script>
+  <script src="static/dist/js/sidebarmenu.js"></script>
   <!--Custom JavaScript -->
-  <script src="/static/dist/js/feather.min.js"></script>
-  <script src="/static/dist/js/custom.min.js"></script>
+  <script src="static/dist/js/feather.min.js"></script>
+  <script src="static/dist/js/custom.min.js"></script>
   <!--This page plugins -->
-  <script src="/static/assets/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
-  <script src="/static/assets/extra-libs/datatables.net-bs4/js/dataTables.responsive.min.js"></script>
+  <script src="static/assets/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
+  <script src="static/assets/extra-libs/datatables.net-bs4/js/dataTables.responsive.min.js"></script>
   <script>
     $("#zero_config").DataTable({
       order: [[4, 'desc']],
