--- a/web/templates/account-create.html
+++ b/web/templates/account-create.html
@@ -10,10 +10,10 @@
     <title>REDtone {{title}}</title>
     <link rel="canonical" href="https://www.wrappixel.com/templates/materialpro/" />
     <!-- Favicon icon -->
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/assets/images/favicon.png" />
-    <link rel="stylesheet" href="/static/assets/libs/apexcharts/dist/apexcharts.css" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/NG999/static/assets/images/favicon.png" />
+    <link rel="stylesheet" href="/NG999/static/assets/libs/apexcharts/dist/apexcharts.css" />
     <!-- Custom CSS -->
-    <link href="/static/dist/css/style.min.css" rel="stylesheet" />
+    <link href="/NG999/static/dist/css/style.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -65,7 +65,7 @@
                         {#<b class="logo-icon">
                             <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                             <!-- Dark Logo icon -->
-                            <img src="/static/assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                            <img src="/NG999/static/assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
                             <!-- Light Logo icon -->
                             <img src="https://intranet.redtone.com/home/logotkt.png" alt="homepage"
                                 class="light-logo" />
@@ -74,8 +74,8 @@
                         <!-- Logo text -->
                         <span class="logo-text">
                             <!-- dark Logo text -->
-                            <img src="/static/assets/images/logo-text.png" alt="homepage" class="dark-logo" />
-                            <img src="/static/assets/images/Redtone.png" alt="homepage" class="light-logo" width="135"
+                            <img src="/NG999/static/assets/images/logo-text.png" alt="homepage" class="dark-logo" />
+                            <img src="/NG999/static/assets/images/Redtone.png" alt="homepage" class="light-logo" width="135"
                                 height="50" />
                         </span>
                     </a>
@@ -148,7 +148,7 @@
                                     Please Fill in below Information
                                 </h4>
 
-                                <form action="/addAccount" method="POST">
+                                <form action="/NG999/addAccount" method="POST">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
@@ -227,29 +227,29 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="/static/assets/libs/jquery/dist/jquery.min.js"></script>
-    <script src="/static/assets/extra-libs/taskboard/js/jquery.ui.touch-punch-improved.js"></script>
-    <script src="/static/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
+    <script src="/NG999/static/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="/NG999/static/assets/extra-libs/taskboard/js/jquery.ui.touch-punch-improved.js"></script>
+    <script src="/NG999/static/assets/extra-libs/taskboard/js/jquery-ui.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <!-- <script src="/static/assets/libs/popper.js/popper.min.js"></script> -->
-    <script src="/static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- <script src="/NG999/static/assets/libs/popper.js/popper.min.js"></script> -->
+    <script src="/NG999/static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- apps -->
-    <script src="/static/dist/js/app.min.js"></script>
-    <script src="/static/dist/js/app.init.js"></script>
-    <script src="/static/dist/js/app-style-switcher.js"></script>
+    <script src="/NG999/static/dist/js/app.min.js"></script>
+    <script src="/NG999/static/dist/js/app.init.js"></script>
+    <script src="/NG999/static/dist/js/app-style-switcher.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="/static/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-    <script src="/static/assets/extra-libs/sparkline/sparkline.js"></script>
+    <script src="/NG999/static/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+    <script src="/NG999/static/assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <script src="/static/dist/js/waves.js"></script>
+    <script src="/NG999/static/dist/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="/static/dist/js/sidebarmenu.js"></script>
+    <script src="/NG999/static/dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
-    <script src="/static/dist/js/feather.min.js"></script>
-    <script src="/static/dist/js/custom.min.js"></script>
+    <script src="/NG999/static/dist/js/feather.min.js"></script>
+    <script src="/NG999/static/dist/js/custom.min.js"></script>
     <!--This page plugins -->
-    <script src="/static/assets/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
-    <script src="/static/assets/extra-libs/datatables.net-bs4/js/dataTables.responsive.min.js"></script>
+    <script src="/NG999/static/assets/extra-libs/datatables.net/js/jquery.dataTables.min.js"></script>
+    <script src="/NG999/static/assets/extra-libs/datatables.net-bs4/js/dataTables.responsive.min.js"></script>
     <script>
         $("#zero_config").DataTable({
             order: [[4, 'desc']],
