--- a/web/templates/sidebarWholeseller.html
+++ b/web/templates/sidebarWholeseller.html
@@ -6,7 +6,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/"
+                  href="/NG999/"
                   aria-expanded="false"
                   ><i class="mdi mdi-gauge"></i
                   ><span class="hide-menu">Dashboard</span></span></a
@@ -17,7 +17,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/dataMigration"
+                  href="/NG999/dataMigration"
                   aria-expanded="false"
                   ><i class="mdi mdi-table"></i
                   ><span class="hide-menu">Data Migration</span></span></a
@@ -28,7 +28,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/withDeclaration"
+                  href="/NG999/withDeclaration"
                   aria-expanded="false"
                   ><i class="mdi mdi-table"></i
                   ><span class="hide-menu" style="white-space: normal;">Customer List (With Declaration)</span></span></a
@@ -39,7 +39,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/withoutDeclaration"
+                  href="/NG999/withoutDeclaration"
                   aria-expanded="false"
                   ><i class="mdi mdi-table"></i
                   ><span class="hide-menu" style="white-space: normal;">Customer List (Without Declaration)</span></span></a
@@ -50,7 +50,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/bundleDeclare"
+                  href="/NG999/bundleDeclare"
                   aria-expanded="false"
                   ><i class="mdi mdi-table"></i
                   ><span class="hide-menu" style="white-space: normal;">Bundle Declaration</span></span></a
