--- a/web/templates/error.html
+++ b/web/templates/error.html
@@ -16,14 +16,14 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/static/assets/images/favicon.png"
+      href="/NG999/static/assets/images/favicon.png"
     />
     <link
       rel="stylesheet"
-      href="/static/assets/libs/apexcharts/dist/apexcharts.css"
+      href="/NG999/static/assets/libs/apexcharts/dist/apexcharts.css"
     />
     <!-- Custom CSS -->
-    <link href="/static/dist/css/style.min.css" rel="stylesheet" />
+    <link href="/NG999/static/dist/css/style.min.css" rel="stylesheet" />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -105,7 +105,7 @@
                 <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                 <!-- Dark Logo icon -->
                 <img
-                  src="/static/assets/images/logo-icon.png"
+                  src="/NG999/static/assets/images/logo-icon.png"
                   alt="homepage"
                   class="dark-logo"
                 />
@@ -121,7 +121,7 @@
               <span class="logo-text">
                 <!-- dark Logo text -->
                 <img
-                  src="/static/assets/images/logo-text.png"
+                  src="/NG999/static/assets/images/logo-text.png"
                   alt="homepage"
                   class="dark-logo"
                 />
@@ -230,27 +230,27 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
-    <script src="/static/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="/NG999/static/assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="/static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/NG999/static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- apps -->
-    <script src="/static/dist/js/app.min.js"></script>
-    <script src="/static/dist/js/app.init.js"></script>
-    <script src="/static/dist/js/app-style-switcher.js"></script>
+    <script src="/NG999/static/dist/js/app.min.js"></script>
+    <script src="/NG999/static/dist/js/app.init.js"></script>
+    <script src="/NG999/static/dist/js/app-style-switcher.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
-    <script src="/static/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
-    <script src="/static/assets/extra-libs/sparkline/sparkline.js"></script>
+    <script src="/NG999/static/assets/libs/perfect-scrollbar/dist/perfect-scrollbar.jquery.min.js"></script>
+    <script src="/NG999/static/assets/extra-libs/sparkline/sparkline.js"></script>
     <!--Wave Effects -->
-    <script src="/static/dist/js/waves.js"></script>
+    <script src="/NG999/static/dist/js/waves.js"></script>
     <!--Menu sidebar -->
-    <script src="/static/dist/js/sidebarmenu.js"></script>
+    <script src="/NG999/static/dist/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
-    <script src="/static/dist/js/feather.min.js"></script>
-    <script src="/static/dist/js/custom.min.js"></script>
+    <script src="/NG999/static/dist/js/feather.min.js"></script>
+    <script src="/NG999/static/dist/js/custom.min.js"></script>
     <!--This page JavaScript -->
     <!-- chartist chart -->
-    <script src="/static/assets/libs/apexcharts/dist/apexcharts.min.js"></script>
+    <script src="/NG999/static/assets/libs/apexcharts/dist/apexcharts.min.js"></script>
     <!-- Chart JS -->
-    <script src="/static/dist/js/pages/dashboards/dashboard5.js"></script>
+    <script src="/NG999/static/dist/js/pages/dashboards/dashboard5.js"></script>
   </body>
 </html>
