--- a/web/templates/navbar.html
+++ b/web/templates/navbar.html
@@ -27,7 +27,7 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle waves-effect waves-dark" href="#" data-bs-toggle="dropdown"
         aria-haspopup="true" aria-expanded="false">
-        <img src="/static/assets/images/users/1.jpg" alt="user" width="30" class="profile-pic rounded-circle" />
+        <img src="/NG999/static/assets/images/users/1.jpg" alt="user" width="30" class="profile-pic rounded-circle" />
       </a>
       <div class="
                     dropdown-menu dropdown-menu-end
@@ -74,7 +74,7 @@
                   >
 -->
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="/logout"><i data-feather="log-out" class="feather-sm text-danger me-1 ms-1"></i>
+        <a class="dropdown-item" href="/NG999/logout"><i data-feather="log-out" class="feather-sm text-danger me-1 ms-1"></i>
           Logout</a>
         
       </div>
