--- a/web/templates/sidebar.html
+++ b/web/templates/sidebar.html
@@ -6,7 +6,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/"
+                  href="/NG999/"
                   aria-expanded="false"
                   ><i class="mdi mdi-gauge"></i
                   ><span class="hide-menu">Dashboard</span></span></a
@@ -16,7 +16,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/accountList"
+                  href="/NG999/accountList"
                   aria-expanded="false"
                   ><i class="mdi mdi-gauge"></i
                   ><span class="hide-menu">Account List</span></span></a
@@ -26,7 +26,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/companyList"
+                  href="/NG999/companyList"
                   aria-expanded="false"
                   ><i class="mdi mdi-table"></i
                   ><span class="hide-menu">Company List</span></span></a
@@ -36,7 +36,7 @@
               <li class="sidebar-item">
                 <a
                   class="sidebar-link waves-effect waves-dark sidebar-link"
-                  href="/createAccount"
+                  href="/NG999/createAccount"
                   aria-expanded="false"
                   ><i class="mdi mdi-table"></i
                   ><span class="hide-menu">Create Account</span></span></a
