--- a/web/templates/resetPassword.html
+++ b/web/templates/resetPassword.html
@@ -59,7 +59,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Password Reset</h2>
+        <h2>First Time Password Reset</h2>
 
         {% include 'debug.html' %}
 
@@ -67,7 +67,7 @@
             <label for="pass">New Password:</label>
             <input type="password" id="pass" name="pass" required>
 
-            <label for="passConfirmed">Confirmed New Password</label>
+            <label for="passConfirmed">Confirm New Password:</label>
             <input type="password" id="passConfirmed" name="passConfirmed" required>
 
             <input type="submit" value="Submit">
