--- a/web/templates/accountList.html
+++ b/web/templates/accountList.html
@@ -164,6 +164,50 @@
             <div class="container-fluid">
                 {% include 'debug.html' %}
 
+
+                <div class="modal fade" id="updatePass" tabindex="-1"
+                    aria-labelledby="updatePass" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+                            <form method="POST" action="/NG999/updateWhosellerPass" onsubmit="return validateForm()">
+
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Password Reset</h5>
+                                    <div class="form-item">
+                                    <input type="text" id="accountID" name="accountID" class="custom-input" readonly hidden>
+                                    </div>
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close"></button>
+                                </div>
+
+
+                                <div class="modal-body">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <div class="form-item">
+                                                <label for="newPass">New Password</label>
+                                                <input type="password" class="custom-input" name="newPass"
+                                                    id="newPass" required/>
+                                            </div>
+                                        </div>
+                                        <div class="col-6">
+                                            <div class="form-item">
+                                                <label for="confirmNewPass">Confirm Password</label>
+                                                <input type="password" class="custom-input" name="confirmNewPass"
+                                                    id="confirmNewPass" required/>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="modal-footer" style="justify-content: flex-start;">
+                                    <button type="submit" class="btn btn-primary">Update</button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col-12">
                         <h2 class="card-title" style="margin-bottom: 20px;">Wholesaler Account List</h2>
@@ -201,10 +245,14 @@
                                                         </a>
                                                         <div class="dropdown-menu dropdown-menu-end">
                                                             <a class="dropdown-item" href="#"
-                                                                onclick="update({{cust}})">Update</a>
+                                                                onclick="update({{cust}})">Update Info
+                                                            </a>
 
-                                                                <a class="dropdown-item" href="#"
-                                                                onclick="reset({{cust}})">Reset Password</a>
+                                                            <a class="dropdown-item" data-bs-toggle="modal"
+                                                            href="#updatePass" id="updatePassword"
+                                                            data-whole-id="{{Wholeseller['Account_ID']}}">
+                                                            Reset Password
+                                                            </a>
                                                         </div>
                                                       
                                                     </div>
@@ -273,6 +321,46 @@
             $("#customerList").DataTable({
                 order: [[4, 'desc']],
             });
+
+
+
+            $('#updatePass').on('show.bs.modal', function (event) {
+                let triggerLink = $(event.relatedTarget);
+                let accID = triggerLink.data('whole-id');
+              
+                $('#accountID').val(accID);
+                $('#newPass').val("");
+                $('#confirmNewPass').val("");
+
+
+            });
+
+
+
+            function validateForm () {
+                let pass = document.getElementById("newPass").value.toString();
+                let passConfirmed = document.getElementById("confirmNewPass").value.toString();
+    
+    
+                passs = pass.replace(/\s/g, "");
+                passConfirmeds = passConfirmed.replace(/\s/g, "");
+    
+    
+                if (passs === '' || passConfirmeds === '' || pass.length < 8 || passConfirmed.length < 8){
+                    alert("Invalid Password");
+                    return false;
+                }
+
+                if (pass === passConfirmed){
+                    return true;
+                }
+    
+                else
+                {
+                    alert("Unmatched Password");
+                    return false;
+                }
+            }
         </script>
 </body>
 
