--- a/web/templates/dataMigration.html
+++ b/web/templates/dataMigration.html
@@ -193,7 +193,7 @@
                     aria-labelledby="updateModal" aria-hidden="true">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
-                            <form method="POST" action="/NG999/declare">
+                            <form method="POST" action="/NG999/declare" id="submitForm">
 
                                 <div class="modal-header">
                                     <h5 class="modal-title">Update Declaration</h5>
@@ -242,7 +242,7 @@
                                 </div>
 
                                 <div class="modal-footer" style="justify-content: flex-start;">
-                                    <button type="submit" class="btn btn-primary">Update and Declare</button>
+                                    <button type="submit" class="btn btn-primary" id="submitDeclare">Update and Declare</button>
                                 </div>
                             </form>
                         </div>
@@ -415,6 +415,17 @@
                 $('#modalCustInfo').val(custInfo);
                 $('#modalcustID').val(custID);
             });
+
+
+        document.getElementById("submitDeclare").addEventListener("click", function (event) {
+            event.preventDefault();
+            
+            if (window.confirm("I hereby declare that the infomation provided is true and correct")) {
+                document.getElementById('submitForm').submit();
+            } else {
+
+            }
+        });
         
         
         </script>
