--- a/web/templates/account-create.html
+++ b/web/templates/account-create.html
@@ -159,7 +159,7 @@
 
                                             <div class="form-group">
                                                 <label for="wholesellerID">Company Name:</label>
-                                                 <select class="form-select" id="wholesellerID" name="wholesellerID" required>
+                                                 <select class="form-select" id="wholesellerID" name="wholesellerID" required style="margin-bottom: 10px;">
 
                                                  {% for w in wholesellerList %}
                                                     <option value="{{w['Company_ID']}}">{{w['Company_Name']}}</option>
@@ -184,6 +184,20 @@
                                                 </select>
                                             </div>
                                         </div>
+
+
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <label for="pn">Phone Number</label>
+                                                <input type="text" class="form-control" id="pn" name="pn"
+                                                    required style="margin-bottom: 10px;">
+                                            </div>
+
+                                        </div>
+
+
+
+
                                     </div>
 
                                     <!-- Submit Button with added margin -->
