--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -152,7 +152,7 @@
                 <div class="col-md-3">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">TOTAL MIGRATE USER(S)</h4>
+                            <h4 class="card-title">ACTIVE WHOLESALER</h4>
                             <p class="card-text">{{dashList['active']}}</p>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                 <div class="col-md-3">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="card-title">ACTIVE WHOLESALER</h4>
+                            <h4 class="card-title">INACTIVE WHOLESALER</h4>
                             <p class="card-text">{{dashList['inactive']}}</p>
                         </div>
                     </div>
